--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bitclout-sdk": "^0.5.2",
     "chance": "^1.0.9",
     "history": "^4.6.1",
     "react": "^18.2.0",
