creating react modal

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-spring": "^9.0.0-rc.3",
+    "styled-components": "^5.3.5",
     "superagent": "^3.5.2"
   },
   "scripts": {
