--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "awesome-notifications": "^3.1.3",
     "bitclout-sdk": "^0.5.2",
     "chance": "^1.0.9",
     "history": "^4.6.1",
@@ -13,6 +17,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-spring": "^9.0.0-rc.3",
+    "react-toastify": "^9.0.7",
+    "react-toastr": "^3.0.0",
     "styled-components": "^5.3.5",
     "superagent": "^3.5.2",
     "tw-elements": "^1.0.0-alpha12"
