--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "awesome-notifications": "^3.1.3",
     "bitclout-sdk": "^0.5.2",
     "chance": "^1.0.9",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^10.1.0",
     "history": "^4.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-notifications": "^1.7.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
